@startuml
title "Allergy Management Class Diagram"

class AllergyDto {
    +allergen: String
    +severity: String
    +diagnosedDate: Date
    +notes: String
    +constructor(allergen, severity, diagnosedDate, notes)
}

class AllergyController {
    +addAllergyModel(req, res): Promise<void>
    +searchAllergies(req, res): Promise<void>
}

class AllergyService {
    -allergyRepository: AllergyRepository
    +addAllergyModel(allergyDto: AllergyDto): Promise<Allergy>
    +searchAllergies(searchDto: AllergySearchDto): Promise<AllergyDto[]>
}

class Allergy {
    +id: String
    +allergen: String
    +severity: String
    +diagnosedDate: Date
    +notes: String
}

class AllergyRepository {
    +findByAllergen(allergen: String): Promise<Allergy>
    +addAllergyModel(allergy: Allergy): Promise<Allergy>
    +findByFilters(filters: Object): Promise<Allergy[]>
}



AllergyController --> AllergyService: uses
AllergyController --> AllergyDto: creates
AllergyService --> AllergyRepository: uses
AllergyService --> Allergy: manages
AllergyRepository --> Allergy: persists

@enduml